--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+* {
+  margin:0;
+  padding:0;
+}
+
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
