--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+
 * {
   margin:0;
   padding:0;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 ul {
