--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,14 @@ img {
   display: flex;
   flex-direction: row;
 }
-
+pre {
+  background-color: #ccc;
+    color: #000;
+    border:1px solid #aaa;
+    overflow: visible;
+    padding:10px;
+    border-radius:5px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
