--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 * {
-  margin:0;
-  padding:0;
-  font-family: 'Nanum Gothic', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 #root {
-  background:#f2f2f2;
+    width: 100%;
+    height: 100%;
+    background: #f2f2f2;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 img {
-  width:100%;
+    width: 100%;
 }
 .adminWrap {
-  display: flex;
-  flex-direction: row;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 pre {
-  background-color: #ccc;
+    background-color: #ccc;
     color: #000;
-    border:1px solid #aaa;
+    border: 1px solid #aaa;
     overflow: visible;
-    padding:10px;
-    border-radius:5px;
+    padding: 10px;
+    border-radius: 5px;
 }
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+        'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+@page {
+    size: auto;
+    margin: 0;
+    /* // size: landscape; */
+}
+
+@media print {
+    html,
+    body {
+        width: 210mm;
+        height: 297mm;
+        background: #fff;
+        margin: 0;
+    }
+    .page {
+        width: 100%;
+        margin: 0;
+        border: initial;
+        border-radius: initial;
+        width: initial;
+        min-height: initial;
+        box-shadow: initial;
+        background: initial;
+        page-break-after: always;
+    }
 }
