--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,28 @@ code {
     vertical-align: top;
     content: '';
 }
+.btnWrap {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.btnWrap button {
+    width: 10%;
+    height: 40px;
+    background: rgb(0, 128, 255);
+    border: none;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.btnWrap button:disabled {
+    background: #ccc;
+}
+.btnWrap p {
+    width: 100%;
+    text-align: center;
+    margin: 0.5rem 0;
+    letter-spacing: -1px;
+    color: #333;
+    font-weight: 600;
+}
